# botc-homebrew-final-girl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README-develop.md  README.md  attributions.md  extra.json  homebrew-template.json  homebrew.json  make-wiki-content.py  pyproject.toml
pyapp/templates/: abilities.jinja.md  character.jinja.md
schemas/: extra.schema.json
