[project]
name = "botc-homebrew-final-girl"
version = "0.0.1"
description = ""
authors = [
    {name = "Chisel",email = "chisel@malik-wright.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.14.1"
